@@ -1,3 +1,5 @@
 // Vitest Snapshot v1
 
+exports[`<IconTemplate /> > reactive props > ##0CDC73 1`] = `"#0cdc73"`;
+
 exports[`<IconTemplate /> > reactive props > #0CDC73 1`] = `"0cdc73"`;
